Adding compatibility with Oracle JDK 8